# guideXOS-Server

./: .gitignore  Directory.Build.props  Directory.Build.targets  KernelBuild.vcxproj  Makefile  NEXT_STEPS.md  NOTEPAD_COMPLETE.md  NOTEPAD_READY.md  PHASE5_CONTINUATION.md  PHASE5_FINAL_STATUS.md  PHASE5_GAPS.md  PHASE5_IMPLEMENTATION.md  PHASE5_PRIORITY2_STATUS.md  PHASE5_TESTING_GUIDE.md  PHASE6_SESSION1.md  README.md  ROADMAP.txt  RUN-KERNEL.bat  SESSION_PROGRESS.md  TESTS.TXT  _fix_filters_audio.py  allocator.cpp  allocator.h  app_launch_resolver.cpp  app_launch_resolver.h  app_manifest.cpp  app_manifest.h  app_manifest_loader.cpp  app_manifest_loader.h  app_manifest_validator.cpp  app_manifest_validator.h  app_registry.cpp  app_registry.h  bitmap_font.h  build-native-experimental.bat  build-uefi.ps1  build.bat  build.ps1  build_and_run.ps1  build_output.txt  (+189 more)
.github/: copilot-instructions.md
Apps/HelloWorld/: app.json
ESP/: kernel.elf  startup.nsh
Properties/: launchSettings.json
assets/Fonts/: enludo.btf
assets/Scripts/: notepad.gxm.txt
bkup/: privatekey.ppk  publickey
docs/: CALCULATOR_COMPLETE.md  CONSOLE_WINDOW_COMPLETE.md  CRASH_FIX_SUMMARY.md  DEVELOPMENT_PLAN.md  ITERATOR_DEBUG_FIX.md  ITERATOR_DEBUG_FIX_COMPLETE.md  ITERATOR_FIX_ACTUAL_ROOT_CAUSE.md  ITERATOR_FIX_FINAL.md  ITERATOR_FIX_FINAL_V2.md  NOTEPAD_100_PERCENT_COMPLETE.md  NOTEPAD_CRASH_DEBUG.md  NOTEPAD_CRASH_DIAGNOSIS.md  NOTEPAD_CRASH_FIXED.md  NOTEPAD_DIAGNOSTIC_GUIDE.md  NOTEPAD_PARITY_ANALYSIS.md  NOTEPAD_PARITY_PROGRESS.md  NOTEPAD_QUICK_REFERENCE.md  NOTEPAD_TEST_GUIDE.md  PHASE5_COMPLETE.md  PHASE5_FINAL_COMPLETE.md  PHASE5_FINAL_SUMMARY.md  PHASE5_IMPLEMENTATION.md  PHASE5_POLISH_COMPLETION.md  PHASE5_QUICKREF.md  PHASE6_IMPLEMENTATION.md  PHASE6_NEXT_STEPS.md  PHASE6_NOTEPAD_COMPLETE.md  QUICK_FIX_SUMMARY.md  README.md  SESSION_NOTEPAD_PARITY_COMPLETE.md  SESSION_SUMMARY_CURRENT.md  SIMPLE_FIX.md  TEST_NOTEPAD.md
guideXOSBootLoader/: Uefi.h  acpi.h  boot_diagnostics.h  bootinfo.h  debug_helpers.h  elf.cpp  elf.h  fb_console.cpp  fb_console.h  guideXOSBootLoader.vcxproj  guideXOSBootLoader.vcxproj.backup  guideXOSBootLoader.vcxproj.filters  guidexOSBootInfo.h  guidexOSBootInfo_validation.cpp  handoff_trampoline.asm  intrinsics.cpp  main.cpp  paging.cpp  paging.h  pci.cpp  pci.h  trampoline.asm  trampoline_msvc.cpp  uefi_guids.cpp  uefi_shim.h
guideXOSBootLoader/Guid/: Acpi.h  FileInfo.h
guideXOSBootLoader/Protocol/: GraphicsOutput.h  LoadedImage.h  SimpleFileSystem.h
kernel/: Makefile  README.md  build-x86.bat  clean.bat
kernel/core/: arch.cpp  architecture_detector.cpp  ata.cpp  block_device.cpp  cxx_runtime.cpp  desktop.cpp  desktop_capabilities.cpp  desktop_font.cpp  device_tree.cpp  dhcp.cpp  dns.cpp  ethernet.cpp  fb_console.cpp  feature_report.cpp  framebuffer.cpp  fs_ext4.cpp  fs_fat.cpp  fs_ntfs.cpp  (+49 more)
scripts/: build-and-run-riscv64_in_linux.sh  build-and-run-sparcv8_in_linux.sh  build-and-run-sparcv9_in_linux.sh  build-ia64.sh  build-riscv64.sh  build-sparcv9.sh  check-multiboot.bat  create-test-disks.ps1  create-test-disks.sh  diagnose-qemu.bat  generate-desktop-icon-theme-flat.ps1  generate-wallpaper-pack.ps1  run-ia64_in_linux.sh  run-qemu-fs-test.ps1  run-qemu-fs-test.sh  run-qemu-fs-test2.ps1  run-qemu-x86-vnc.bat  run-qemu-x86-vnc.sh  run-qemu-x86-with-build.bat  run-qemu-x86.bat  run-qemu-x86.sh  run-riscv64_in_windows.bat  run-sparcv9_in_windows.bat  run-sparkv8_in_windows.sh  test-build.bat  test-build.sh
sdk/: README.md  build-samples.ps1
sdk/samples/helloworld/: CMakeLists.txt  README.md  app.json  main.cpp
sdk/samples/resourceviewer/: CMakeLists.txt  README.md  app.json  main.cpp
sdk/samples/resourceviewer/resources/: about.txt
tools/: gxbuild  gxbuild.cmd  gxbuild.py
(+290 files in other folders)
